# python-module-template

./: README-template.md  README.md  pyproject.toml  requirements.txt  workspace.code-workspace
tests/: test_1.py
